k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend

spec:
  replicas: 3

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          # image: server-backend:latest
          image: ghcr.io/sandram92/server-backend:72359b638849fa46a239d8f095fe560a0da23134
          imagePullPolicy: Always

          ports:
            - containerPort: 8001

          startupProbe:
            httpGet:
             path: /health
             port: 8001
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 20  

          readinessProbe:
           httpGet:
            path: /health
            port: 8001
           initialDelaySeconds: 20
           periodSeconds: 10
           timeoutSeconds: 3
           failureThreshold: 6

          livenessProbe:
           httpGet:
            path: /health
            port: 8001
           initialDelaySeconds: 40
           periodSeconds: 10
           timeoutSeconds: 3
           failureThreshold: 3
