k8s/backend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: backend

spec:
  type: NodePort

  selector:
    app: backend

  ports:
    - port: 8001
      targetPort: 8001
      nodePort: 30081
