k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend

spec:
  type: NodePort

  selector:
    app: frontend

  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
